Add correct ACU path

--- a/settings/game_settings.json
+++ b/settings/game_settings.json
@@ -1,4 +1,4 @@
 {
-    "path": "/Users/pavelsupenko/Projects/autotesting-basic",
+    "path": "/Users/pavelsupenko/Library/Application Support/CrossOver/Bottles/Windows-10-64/drive_c/Games/Assassin's Creed Unity",
     "preset": "ACU"
 }
